--- a/JS-examples/event-bubbling-capturing.html
+++ b/JS-examples/event-bubbling-capturing.html
@@ -60,7 +60,7 @@
 
         // output will be first "outer", "middle" & "inner" since we made it as true
         // If you pass the event capturing phase as "true"
-        // output will be first "inner", "middle" & "outer" since we made it as false
+        // output will be first "inner", "middle" & "outer" as we made it as false
 
     </script>
 </html>
